add user and server config generation

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+# ingnore
+servers/
+users/
+
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -62,7 +67,6 @@ db.sqlite3
 db.sqlite3-journal
 
 # Flask stuff:
-instance/
 .webassets-cache
 
 # Scrapy stuff:
