--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ charset-normalizer==2.1.0
 frozenlist==1.3.1
 greenlet==1.1.2
 idna==3.3
+loguru==0.6.0
 multidict==6.0.2
 psycopg2-binary==2.9.3
 pycparser==2.21
