--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,28 +1,24 @@
 version: '3.5'
 services:
-  db:
-    container_name: endurance_db
-    restart: always
-    image: postgres:12.9
-    environment:
-      POSTGRES_DB: ${DB_NAME}
-      POSTGRES_USER: ${DB_USER}
-      POSTGRES_PASSWORD: ${DB_PASSWORD}
-      TZ: Europe/Moscow
-    ports:
-      - 5432:5432 
-    volumes:
-      - ./pg_data:/var/lib/postgresql/data
   bot:
     container_name: endurance_bot
     build: .
-    # environment:
-    #   DB_HOST: ${DB_HOST}
-    #   DB_PORT: ${DB_PORT}
-    #   DB_NAME: ${DB_NAME}
-    #   DB_USER: ${DB_USER}
-    #   DB_PASSWORD: ${DB_PASSWORD}
     env_file:
       - .env
-    depends_on:
-      - db
+    # depends_on:
+    #   - db
+    volumes:
+      - ~/projects/test/logs:/endurance_vpn_bot/logs:rw
+#   db:
+#     container_name: endurance_db
+#     restart: always
+#     image: postgres:12.9
+#     environment:
+#       POSTGRES_DB: ${DB_NAME}
+#       POSTGRES_USER: ${DB_USER}
+#       POSTGRES_PASSWORD: ${DB_PASSWORD}
+#       TZ: Europe/Moscow
+#     ports:
+#       - 5432:5432
+#     volumes:
+#       - ~/test/data:/var/lib/postgresql/data
