--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
 # ingnore
 servers/
 users/
-db/migrations.py
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
@@ -133,3 +132,4 @@ dmypy.json
 .pyre/
 
 # db stuff
+/*.sqlite
