--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ greenlet==1.1.2
 idna==3.3
 loguru==0.6.0
 multidict==6.0.2
+psycopg2-binary==2.9.3
 pycparser==2.21
 PyNaCl==1.5.0
 python-dotenv==0.20.0
