--- a/requirements-linux.txt
+++ b/requirements-linux.txt
@@ -18,7 +18,7 @@ loguru==0.6.0
 magic-filter==1.0.9
 multidict==6.0.4
 paramiko==2.12.0
-psycopg2==2.9.5
+psycopg2-binary==2.9.5
 pycparser==2.21
 PyNaCl==1.5.0
 python-dotenv==0.21.0
